changed a few things to use order_items, deleted charges layout

--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,55 +1,7 @@
 
 
 <%= form_tag order_charges_path(@order) do %>
-	<table class="table">
-		<thead>
-			<th> Item </th>
-			<th> Price </th>
-			<th> Qty </th>
-			<th> Total </th>
-		</thead>
-		<% @order_details.each_pair do |id, qty| %>
-		<tr>
-
-			<td><%= @items[id].name %></td> 
-			<td> <%= number_to_currency @items[id].price %></td>
-			<td><%= qty %> </td>
-			<td> <%= number_to_currency(@items[id].price * qty) %></td>
-		</tr>
-		<% end %>
-
-		<tfoot>
-			<% if @order.subtotal != @order.total %>
-				<tr>
-					<td>Subtotal</td>
-					<td></td>
-					<td></td>
-					<td> <%= integer_to_currency(@order.subtotal) %> </td>
-				</tr>
-				<tr>
-					<td>Tax</td>
-					<td></td>
-					<td></td>
-					<td> <%= integer_to_currency(@order.total-@order.subtotal) %></td>
-				</tr>
-				<tr>
-					<td>Total</td>
-					<td></td>
-					<td></td>
-					<td> <%= integer_to_currency(@order.total) %> </td>
-				</tr>
-			<% else %>
-				<tr>
-					<td>Total</td>
-					<td></td>
-					<td></td>
-					<td> <%= integer_to_currency(@order.total) %> </td>
-				</tr>
-			<% end %> 
-
-		</tfoot>
-
-	</table>
+	<%= render 'shared/order_details' %>
 
 	<%= telephone_field(:user, :phone, :class => "form-control",:id => "order-phone-number", :placeholder => "Phone #") %> 
 	<br />
