--- a/app/views/receipt_mailer/receipt_email.html.erb
+++ b/app/views/receipt_mailer/receipt_email.html.erb
@@ -7,56 +7,7 @@
 <h2 class="text-center"> # <%= @order.id %> </h2>
 <h3 class="text-center"> <%= @owner.name %> </h3>
 
-  <table class="table">
-    <thead>
-      <td> Item </td>
-      <td> Qty </td>
-      <td> Price </td>
-      <td> Total </td>
-    </thead>
-    <% @order_details.each_pair do |id, qty| %>
-    <tr>
-
-      <td><%= @items[id].name %></td> 
-      <td><%= qty %> </td>
-      <td> <%= number_to_currency @items[id].price %></td>
-      <td> <%= number_to_currency(@items[id].price * qty) %></td>
-    </tr>
-    <% end %>
-
-    
-    <tfoot>
-      <% if @order.subtotal != @order.total %>
-        <tr>
-          <td>Subtotal</td>
-          <td></td>
-          <td></td>
-          <td> <%= @order.integer_to_currency(@order.subtotal) %> </td>
-        </tr>
-        <tr>
-          <td>Tax</td>
-          <td></td>
-          <td></td>
-          <td> <%= @order.integer_to_currency(@order.total-@order.subtotal) %></td>
-        </tr>
-        <tr>
-          <td>Total</td>
-          <td></td>
-          <td></td>
-          <td> <%= @order.integer_to_currency(@order.total) %> </td>
-        </tr>
-      <% else %>
-        <tr>
-          <td>Total</td>
-          <td></td>
-          <td></td>
-          <td> <%= @order.integer_to_currency(@order.total) %> </td>
-        </tr>
-      <% end %> 
-
-    </tfoot>
-
-  </table>
+<%= render 'shared/order_details' %>
 
 <h5 class="text-center"> Thank you for using Shnack! If you had any problems or would like to give us feedback, we'd love to hear what you have to say! E-mail us at contact@shnackapp.com </h5>
   </body>
