--- a/app/views/receipt_mailer/receipt_email.text.erb
+++ b/app/views/receipt_mailer/receipt_email.text.erb
@@ -1,6 +1,6 @@
 Your order #<%= @order.id %> at <%= @order.location_name %> has been placed
 =============================================================================
 
-<% @order_details.each_pair do |id, qty| %>
-   <%= @items[id].name %>  <%= qty %> <%= number_to_currency @items[id].price %> <%= number_to_currency(@items[id].price * qty) %>
+<% @order_items.each do |order_item| %>
+   <%= @items[order_item.item_id].name %>  <%= qty %> <%= number_to_currency @items[order_item.item_id].price %> <%= number_to_currency(@items[order_item.item_id].price * qty) %>
 <% end %>
