use slugs now and order number mods 100 based on vendor.

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -15,7 +15,7 @@
   <tr>
     <td><%= order.user_id %></td>
     <td><%= order.charge_id %></td>
-    <td><%= order.amount %></td>
+    <td><%= order.total %></td>
     <td><%= order.vendor_id %></td>
     <td><%= link_to 'Show', order %></td>
     <td><%= link_to 'Edit', edit_order_path(order) %></td>
