--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<h4 class="text-center"> # <%= @order.id %> </h4>
+<h4 class="text-center"> # <%= @order.order_number %> </h4>
 
 <%= render 'shared/order_details' %>	
 
