--- a/app/views/shared/_order_details.html.erb
+++ b/app/views/shared/_order_details.html.erb
@@ -22,26 +22,26 @@
 					<td>Subtotal</td>
 					<td></td>
 					<td></td>
-					<td> <%= integer_to_currency(@order.subtotal) %> </td>
+					<td> <%= @order.integer_to_currency(@order.subtotal) %> </td>
 				</tr>
 				<tr>
 					<td>Tax</td>
 					<td></td>
 					<td></td>
-					<td> <%= integer_to_currency(@order.total-@order.subtotal) %></td>
+					<td> <%= @order.integer_to_currency(@order.total-@order.subtotal) %></td>
 				</tr>
 				<tr>
 					<td>Total</td>
 					<td></td>
 					<td></td>
-					<td> <%= integer_to_currency(@order.total) %> </td>
+					<td> <%= @order.integer_to_currency(@order.total) %> </td>
 				</tr>
 			<% else %>
 				<tr>
 					<td>Total</td>
 					<td></td>
 					<td></td>
-					<td> <%= integer_to_currency(@order.total) %> </td>
+					<td> <%= @order.integer_to_currency(@order.total) %> </td>
 				</tr>
 			<% end %> 
 
