--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,26 @@
 
 	</div>
 
+	<div class="works_container">
+		<div class="row_2">
+			<div id="works" class="col-md-3" align="center">
+				<%= image_tag("step1.png", :class => "step1")   %>
+
+			</div>
+
+			<div id="works_2" class="col-md-3" align="center">
+				<%= image_tag("step2.png", :class => "step1")   %>
+
+			</div>
+
+			<div id="works_3" class="col-md-3" align="center">
+				<%= image_tag("step3.png", :class => "step1")   %>
+
+			</div>
+
+		</div>
+	</div>
+
 
 
 </body>
