made a bunch of progress on adding transfers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
 
  
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="stripe-key" content="<%= Rails.configuration.stripe[:publishable_key] %>">
 
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
