--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -8,3 +8,16 @@
 	border-top-width: 1px;
 	border-top-style: solid;
 }
+
+.actions {
+	position: relative;
+}
+
+.cancel {
+	position: relative;
+}
+
+.btn-primary {
+	float: right;
+}
+
