--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,61 +13,158 @@
  */
 
 @import "bootstrap";
+@import url(http://fonts.googleapis.com/css?family=Poiret+One);
+@import url(http://fonts.googleapis.com/css?family=Damion);
 
+$smokewhite: whitesmoke;
+$bgblack: #252525;
+
+body {
+	margin-right: 0px;
+	padding-right: 0px;
+}
 
 .logo {
 	width:85%;
 	margin: 0 auto;
 }
 
-.container {
+.website-container {
 	padding-top:15px;
 	width: 100%;
-background-image: -webkit-gradient(
-	linear,
-	left top,
-	left bottom,
-	color-stop(0, #FCFCFC),
-	color-stop(1, #EBEBEB)
-);
-background-image: -o-linear-gradient(bottom, #FCFCFC 0%, #EBEBEB 100%);
-background-image: -moz-linear-gradient(bottom, #FCFCFC 0%, #EBEBEB 100%);
-background-image: -webkit-linear-gradient(bottom, #FCFCFC 0%, #EBEBEB 100%);
-background-image: -ms-linear-gradient(bottom, #FCFCFC 0%, #EBEBEB 100%);
-background-image: linear-gradient(to bottom, #FCFCFC 0%, #EBEBEB 100%);
+	background-image: -webkit-gradient(
+		linear,
+		left top,
+		left bottom,
+		color-stop(0, #FCFCFC),
+		color-stop(1, #EBEBEB)
+	);
+	background-image: -o-linear-gradient(bottom, #FCFCFC 0%, #EBEBEB 100%);
+	background-image: -moz-linear-gradient(bottom, #FCFCFC 0%, #EBEBEB 100%);
+	background-image: -webkit-linear-gradient(bottom, #FCFCFC 0%, #EBEBEB 100%);
+	background-image: -ms-linear-gradient(bottom, #FCFCFC 0%, #EBEBEB 100%);
+	background-image: linear-gradient(to bottom, #FCFCFC 0%, #EBEBEB 100%);
 }
 
-.works_container {
+#level-2 {
+	//width: 100%;
+	//padding-top: 20px;
+	//padding-bottom: 20px;
+	padding: 20px;
+	background-image: -webkit-gradient(
+		linear,
+		left top,
+		left bottom,
+		color-stop(0, #9E1919),
+		color-stop(1, #A62424)
+	);
+	background-image: -o-linear-gradient(bottom, #9E1919 0%, #A62424 100%);
+	background-image: -moz-linear-gradient(bottom, #9E1919 0%, #A62424 100%);
+	background-image: -webkit-linear-gradient(bottom, #9E1919 0%, #A62424 100%);
+	background-image: -ms-linear-gradient(bottom, #9E1919 0%, #A62424 100%);
+	background-image: linear-gradient(to bottom, #9E1919 0%, #A62424 100%);
+}
+
+
+#level-3 {
+  width: 100%;
+  position: relative;
+  margin: 0px auto;
+  background: $bgblack;
+  padding: 25px 0px;
+  min-height: 560px;
+}
+
+#size-1 {
+margin: 0px auto;
+	max-width: 980px;
+}
+
+.step{
+  //padding: 15px;
+}
+
+.step-style {
+  text-align: center;
+  color: $smokewhite;
+}
+
+h1.step-style {
+  font-family: "Damion";
+  font-size: 3em;
+  //color: $smokewhite;
+  letter-spacing: .2em;
+}
+
+p.step-style {
+  //padding: 0px 25px;
+  font-family: "Poiret One", Geneva, serif;
+  font-size: 1.6em;
+  line-height: 1em;
+  font-weight: 900;
+  //color: $smokewhite;
+}
+
+img.step-style {
+  opacity: .9;
+}
+
+#phone{
+position: absolute;
+bottom: -45px;
+right: 80px;
+z-index: 20;
+  width: 230px;
+
+}
+
+
+#info-tagline {
+ font-family: "Poiret One"; 
+  font-size: 3.8em;
+  color: #a61c00;
+  font-weight: 600;
+  margin: 25px 0px;
+  //padding-bottom: 25px;
+  letter-spacing: 1;
+  line-height: .9em;
+  //padding-left: 25px;
+}
+
+span#info-tagline {
+	font-size: 1.3em;
+  //line-height: 0;
+}
+
+
+#info-text {
+  font-size: 1.5em;
+  color: $smokewhite;
+  //width: 560px;
+  padding: 30px;
+    font-family: "Poiret One", Geneva, serif;
+}
+
+.center {
+	margin: 0px auto;
+	background: blue;
+}
+
+.add_margin {
+	margin-bottom: 175px;
+}
+.container {
 	width: 100%;
-	height: 365px;
-	margin-bottom: 60px;
-background-image: -webkit-gradient(
-	linear,
-	left top,
-	left bottom,
-	color-stop(0, #9E1919),
-	color-stop(1, #A62424)
-);
-background-image: -o-linear-gradient(bottom, #9E1919 0%, #A62424 100%);
-background-image: -moz-linear-gradient(bottom, #9E1919 0%, #A62424 100%);
-background-image: -webkit-linear-gradient(bottom, #9E1919 0%, #A62424 100%);
-background-image: -ms-linear-gradient(bottom, #9E1919 0%, #A62424 100%);
-background-image: linear-gradient(to bottom, #9E1919 0%, #A62424 100%);
+		padding: 0px;
 }
 
-.row {
-	margin-bottom: 75px;
-}
 
-.step1 {
-	margin-top: 75px;
-	height: 150px;
-}
-
-@media (min-width: 992px) { 
-
-.logo {
-	width:100%
-}
+.info-links {
+	color: white;
+	font-size: 2em;
+	    font-family: "Poiret One", Geneva, serif;
+	   &:hover {
+	   		color: red;
+	   }
 
 }
