updated api controller

--- a/app/views/application/select_items.html.erb
+++ b/app/views/application/select_items.html.erb
@@ -15,7 +15,7 @@ Menu: <br />
 		<tr>
 			<td><%= item.name %></td>
 			<td><%= item.item_type %></td>
-			<td><%= number_to_currency item.price %></td>
+			<td><%= integer_to_currency item.price %></td>
 			<td><%= item.nut_allergy %></td>
 			<td><%= item.vegetarian %></td>
 		</tr>
