--- a/app/views/receipt_mailer/receipt_email.text.erb
+++ b/app/views/receipt_mailer/receipt_email.text.erb
@@ -2,5 +2,5 @@ Your order #<%= @order.id %> at <%= @order.location_name %> has been placed
 =============================================================================
 
 <% @order_items.each do |order_item| %>
-   <%= @items[order_item.item_id].name %>  <%= order_item.quantity %> <%= number_to_currency @items[order_item.item_id].price %> <%= number_to_currency(@items[order_item.item_id].price * order_item.quantity) %>
+   <%= @items[order_item.item_id].name %>  <%= order_item.quantity %> <%= integer_to_currency @items[order_item.item_id].price %> <%= integer_to_currency(@items[order_item.item_id].price * order_item.quantity) %>
 <% end %>
