--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,10 +18,16 @@
 
 $smokewhite: whitesmoke;
 $bgblack: #252525;
+$colorred: #9E1919;
+$shnackred: #a61c00;
 
 body {
-	margin-right: 0px;
-	padding-right: 0px;
+	//margin-right: 0px;
+	//padding-right: 0px;
+}
+
+p {
+	font-family: "Poiret One", Geneva, serif;
 }
 
 .logo {
@@ -47,9 +53,7 @@ body {
 }
 
 #level-2 {
-	//width: 100%;
-	//padding-top: 20px;
-	//padding-bottom: 20px;
+	width: 100%;
 	padding: 20px;
 	background-image: -webkit-gradient(
 		linear,
@@ -71,18 +75,33 @@ body {
   position: relative;
   margin: 0px auto;
   background: $bgblack;
-  padding: 25px 0px;
+  padding: 25px 15px;
   min-height: 560px;
 }
 
-#size-1 {
-margin: 0px auto;
+#footer {
+	max-width: 500px;
+	margin: 100px auto;
+}
+
+.foot-style {
+	font-family: "Poiret One", Geneva, serif;
+}
+
+.row {
+	margin-right: 0px;
+	margin-left: 0px;
+}
+
+.container {
+	width: 100%;
+		padding: 0px;
+}
+
+.my-container {
 	max-width: 980px;
 }
 
-.step{
-  //padding: 15px;
-}
 
 .step-style {
   text-align: center;
@@ -91,18 +110,15 @@ margin: 0px auto;
 
 h1.step-style {
   font-family: "Damion";
-  font-size: 3em;
-  //color: $smokewhite;
-  letter-spacing: .2em;
+  font-size: 3.2em;
+	font-weight: 100;
 }
 
 p.step-style {
-  //padding: 0px 25px;
-  font-family: "Poiret One", Geneva, serif;
-  font-size: 1.6em;
-  line-height: 1em;
-  font-weight: 900;
-  //color: $smokewhite;
+  font-size: 1.5em;
+  padding: 0px 25px;
+    font-family: "Poiret One", Geneva, serif;
+
 }
 
 img.step-style {
@@ -112,7 +128,6 @@ img.step-style {
 #phone{
 position: absolute;
 bottom: -45px;
-right: 80px;
 z-index: 20;
   width: 230px;
 
@@ -121,14 +136,12 @@ z-index: 20;
 
 #info-tagline {
  font-family: "Poiret One"; 
-  font-size: 3.8em;
-  color: #a61c00;
-  font-weight: 600;
+ font-size: 3.8em;
+ color: $smokewhite;
+   font-weight: 600;
   margin: 25px 0px;
-  //padding-bottom: 25px;
   letter-spacing: 1;
   line-height: .9em;
-  //padding-left: 25px;
 }
 
 span#info-tagline {
@@ -140,31 +153,59 @@ span#info-tagline {
 #info-text {
   font-size: 1.5em;
   color: $smokewhite;
-  //width: 560px;
-  padding: 30px;
-    font-family: "Poiret One", Geneva, serif;
+  //padding: 30px;
+  font-family: "Poiret One", Geneva, serif;
 }
 
 .center {
 	margin: 0px auto;
-	background: blue;
+	//background: blue;
+	text-align: center;
 }
 
 .add_margin {
 	margin-bottom: 175px;
 }
-.container {
-	width: 100%;
-		padding: 0px;
+
+
+
+ul.info-links {
+ 	list-style: none;
+ 	//margin: 10px 0 0 0;
+	font-size: 3em;
+
+	font-family: "Damion", serif;
+  	li {
+    	//padding: 0px 60px 0px 0px;
+    	//display:inline;
+  	}
+  	a {
+  		color: $shnackred;
+  		text-decoration: none;
+  		&:hover {
+  			color: $smokewhite;
+  			border-bottom: 2px solid $shnackred;
+  		}
+  	}
 }
 
+#return-to-top{
+	text-align: center;
+	margin: 20px auto;
+	a {
+		color: $shnackred;
+  		text-decoration: none;
+  		&:hover {
+  			color: slategray;
+  		}
+	} 
+}
 
-.info-links {
-	color: white;
-	font-size: 2em;
-	    font-family: "Poiret One", Geneva, serif;
-	   &:hover {
-	   		color: red;
-	   }
+#nvc-logo {
+	width: 100px;
+}
 
+.headline {
+	font-family: "Poiret One", Geneva, serif;
+	font-weight: 900;
 }
