--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -5,14 +5,8 @@
 
 	<%= telephone_field(:user, :phone, :class => "form-control",:id => "order-phone-number", :placeholder => "Phone #") %> 
 	<br />
+  <%= email_field(:user, :email, :class => "form-control", :id => "order-phone-number", :placeholder => "E-mail address") %>
  
+  <%= submit_tag %>
 
-	<div class="text-center">
-  <script src="https://checkout.stripe.com/checkout.js"  class="stripe-button"
-          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-name="Shnack"
-          data-label="Pay For Your Order"
-          data-description="Pay For Your Order"
-          data-amount="<%= @order.total %>"></script>
-      </div>
-<% end %>
+	<% end %>
