--- a/app/views/shared/_order_details.html.erb
+++ b/app/views/shared/_order_details.html.erb
@@ -7,11 +7,10 @@
 		</thead>
 		<% @order_items.each do |order_item| %>
 		<tr>
-
 			<td><%= @items[order_item.item_id].name %></td> 
 			<td><%= order_item.quantity %> </td>
-			<td> <%= integer_to_currency @items[order_item.item_id].price %></td>
-			<td> <%= integer_to_currency(@items[order_item.item_id].price * order_item.quantity) %></td>
+			<td> <%= Item.integer_to_currency(@items[order_item.item_id].price) %></td>
+			<td> <%= Item.integer_to_currency(@items[order_item.item_id].price * order_item.quantity) %></td>
 		</tr>
 		<% end %>
 
