changed text and login button

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -210,3 +210,11 @@ ul.info-links {
 	font-weight: 900;
 }
 
+ .btn {
+  padding: 9px 15px;
+  background: #336699;
+  font-size: 14px;
+  color: #FFFFFF;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  }
