--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 					</li>
 				  <% else %>
 					<li>
-					<%= link_to('Login', new_user_session_path, :class => 'btn btn-primary')  %>  
+					<%= link_to('Login', new_user_session_path, :class => 'btn')  %>  
 					</li>
 				  <% end %>
 				  </ul>
@@ -55,9 +55,9 @@
 	
 
 				<div class="col-xs-4 step-style">
-					<h1 class="step-style">Watch</h1>
+					<h1 class="step-style">Relax</h1>
 					<%= image_tag("camera.png", :class => "step-style")   %>
-					<p class="step-style">Sit back, stand up, take pictures, cheer for your team.</p>
+					<p class="step-style">Sit back, relax, and enjoy the experience.</p>
 				</div>
 
 				<div class="col-xs-4 step-style">
