--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -155,6 +155,7 @@ span#info-tagline {
   color: $smokewhite;
   //padding: 30px;
   font-family: "Poiret One", Geneva, serif;
+  display: block;
 }
 
 .center {
@@ -210,3 +211,14 @@ ul.info-links {
 	font-weight: 900;
 }
 
+#contact-us {
+	display: none;
+	//background: yellow;
+	width: 100%;
+	height: 200px;
+	margin-top: 15px;
+}
+
+#email {
+	//background: purple;
+}
