--- a/app/assets/stylesheets/sign_in.css.scss
+++ b/app/assets/stylesheets/sign_in.css.scss
@@ -1,4 +1,4 @@
-input {
+input, textarea {
 	padding: 9px;
 	border: solid 1px #E5E5E5;
 	outline: 0;
@@ -6,10 +6,10 @@ input {
 	margin-bottom: 10px;
 	background: #FFFFFF;
 	&:hover, &:focus { 
-	border-color: #C9C9C9;
+	   border-color: #C9C9C9;
 	} 
 }
-input {
+input, textarea {
   box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
   -moz-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
   -webkit-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
