--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,15 +78,33 @@
 					<ul class="info-links">
 						<li class="col-sm-4 info-links"><a onClick="forFans()">For Fans</a></li>
 						<li class="col-sm-4 info-links"><a onClick="forVendors()">For Vendors</a></li>
-						<li class="col-sm-4 info-links"><a onClick="aboutShnack()">Contact Us</a></li>
+						<li class="col-sm-4 info-links"><a onClick="contactUs()">Contact Us</a></li>
 					</ul>
 				</div>
 
 
  			
 				<div class="row">
-					<div id="info-text" class="col-sm-8">Shnack is a mobile application designed for concessions at large and small scale events, that lets customers order and pay for a vendor's food via their phone. Shnack eliminates the time customers are spending standing in lines by providing a quick and elegant way to purchase food from your seat. Customers will order food from their phone and will be notified when their food is ready to be picked up. By eliminating the need to wait in line, we can increase customer satisfaction, increase vendor revenue, and ultimately help provide a superior experience to customers.</div>
+					<div class="col-sm-8">
+						<div id="info-text">Shnack is a mobile application designed for concessions at large and small scale events, that lets customers order and pay for a vendor's food via their phone. Shnack eliminates the time customers are spending standing in lines by providing a quick and elegant way to purchase food from your seat. Customers will order food from their phone and will be notified when their food is ready to be picked up. By eliminating the need to wait in line, we can increase customer satisfaction, increase vendor revenue, and ultimately help provide a superior experience to customers.
+						</div>
+
+						<div id="contact-us" class="row">
+							<form name="htmlform" id="contact-us-form" method="post" action="#">
+								<input type="text" name="email" id="email" class="col-md-6" placeholder="Email Address" autocomplete="on" />
+								<input type="text" name="name" id="name"  class="col-md-6" placeholder="Your name">
+								<div class="row">
+									<textarea name="comments"  class="col-md-12" placeholder="What would you like to say" rows="4"></textarea>
+								</div>
+								<input type="submit" class="buttn" value="Submit">
+							</form>
+						</div>
+
+
+					</div>
 					<img id="phone" class="col-sm-4" src="images/phone_welcome.png" />
+
+					
 
 				</div>
 			</div>
