--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -7,6 +7,8 @@
 	<br />
   <%= email_field(:user, :email, :class => "form-control", :id => "order-phone-number", :placeholder => "E-mail address") %>
  
-  <%= submit_tag %>
+  <%= button_tag(type: 'submit', class: "btn btn-primary btn-danger") do %>
+      <i class="glyphicon glyphicon-cutlery icon-white"></i> Submit Your Order
+    <% end %>
 
 	<% end %>
