--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -102,7 +102,7 @@
 
 
 					</div>
-					<img id="phone" class="col-sm-4" src="images/phone_welcome.png" />
+					<%= image_tag "phone_welcome.png", :class => "col-sm-4", :id => "phone" %>
 
 					
 
