--- a/app/views/receipt_mailer/receipt_email.html.erb
+++ b/app/views/receipt_mailer/receipt_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-<h2 class="text-center"> # <%= @order.id %> </h2>
+<h2 class="text-center"> # <%= @order.order_number %> </h2>
 <h3 class="text-center"> <%= @owner.name %> </h3>
 
 <%= render 'shared/order_details' %>
