--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 					</li>
 				  <% else %>
 					<li>
-					<%= link_to('Login', new_user_session_path, :class => 'btn')  %>  
+					<%= link_to('Login', new_user_session_path, :class => 'btn btnp')  %>  
 					</li>
 				  <% end %>
 				  </ul>
