--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <%= csrf_meta_tags %>
 </head>
 
-<body>
+<body onload="checkDevice();">
 		<div class="container">
 			<div class="row add_margin">
 
@@ -47,20 +47,20 @@
 
 		<div id="level-2">
 			<div class="row">
-				<div class="col-xs-4 step-style">
+				<div class="col-4 step-style">
 					<h1 class="step-style">Order</h1>
 					<%= image_tag("step1.png", :class => "step-style")   %>
 					<p class="step-style">From your seat, view the menus of vendors. Pay and place your order.</p>
 				</div>
 	
 
-				<div class="col-xs-4 step-style">
+				<div class="col-4 step-style">
 					<h1 class="step-style">Relax</h1>
 					<%= image_tag("camera.png", :class => "step-style")   %>
 					<p class="step-style">Sit back, relax, and enjoy the experience.</p>
 				</div>
 
-				<div class="col-xs-4 step-style">
+				<div class="col-4 step-style">
 					<h1 class="step-style">PickUp</h1>
 					<%= image_tag("step3.png", :class => "step-style")   %>
 					<p class="step-style">When your order is ready, a notification will be sent. Pick up and enjoy.</p>
@@ -70,15 +70,15 @@
 
 		<div id="level-3">
 			<div class="container my-container">
-				<div id="info-tagline">Never miss a moment, never miss a meal.</div>
+				<div id="info-tagline">Never miss a moment, never miss a meal</div>
 		
 
 
 				<div class="row">
 					<ul class="info-links">
-						<li class="col-sm-4 info-links"><a onClick="forFans()">For Fans</a></li>
-						<li class="col-sm-4 info-links"><a onClick="forVendors()">For Vendors</a></li>
-						<li class="col-sm-4 info-links"><a onClick="contactUs()">Contact Us</a></li>
+						<li id="about-links1" class="info-links col-4"><a onClick="forFans()">For Fans</a></li>
+						<li id="about-links2" class="info-links col-4"><a onClick="forVendors()">For Vendors</a></li>
+						<li class="info-links col-4"><a onClick="contactUs()">Contact Us</a></li>
 					</ul>
 				</div>
 
