--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -29,14 +29,19 @@
         <tr class="menu_item" data-id="<%=item.id%>">
           <td><%= item.name %></td>
           <td id="<%=item.id%>_price" data-price="<%=item.price%>"><%= Item.integer_to_currency item.price %></td>
-          <td> 
-          <span class="glyphicon glyphicon-plus plus"></span>
-          </td>
-          <td id="<%=item.id%>_num" class="num"> 0 </td>
-          <td> <span class="glyphicon glyphicon-minus minus"></span> </td>
-          <td class="item_id hidden"><%= item.id %></td>
+                    <% if(item.sold_out) %>
+            <td colspan="3">Item Sold Out</td>
+          <% else %>
+            <td> 
+            <span class="glyphicon glyphicon-plus plus"></span>
+            </td>
+            <td id="<%=item.id%>_num" class="num"> 0 </td>
+            <td> <span class="glyphicon glyphicon-minus minus"></span> </td>
+            <td class="item_id hidden"><%= item.id %></td>
+              <%= f.hidden_field "item[#{item.id}]", :value => 0, :class => "item_#{item.id}" %>
 
-          <%= f.hidden_field "item[#{item.id}]", :value => 0, :class => "item_#{item.id}" %>
+          <% end %>
+
         </tr>
       <% end %>
       </table>
