--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -93,6 +93,13 @@ p {
 	float: left;
 	width: 33.333333%;
 }
+
+.col-6 {
+	poition: relative;
+	float: left;
+	width: 50%;
+}
+
 .row {
 	margin-right: 0px;
 	margin-left: 0px;
@@ -109,6 +116,16 @@ p {
 
 .col-4 {
 	width: 33.333333%;
+}
+
+.headline-light {
+	font-family: "Poiret One", Geneva, sans-serif;
+	color: $smokewhite;
+}
+
+.headline {
+	font-family: "Poiret One", Geneva, sans-serif;
+	font-weight: 900;
 }
 
 .step-style {
@@ -201,16 +218,13 @@ ul.info-links {
 	width: 100px;
 }
 
-.headline {
-	font-family: "Poiret One", Geneva, sans-serif;
-	font-weight: 900;
-}
+
 
 #contact-us {
 	display: none;
 	width: 100%;
 	height: 200px;
-	margin-top: 15px;
+	//margin-top: 15px;
 }
 
  .btn {
@@ -221,3 +235,19 @@ ul.info-links {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   }
+
+
+.contact-field {
+	width: 100%;
+}
+
+.notice {
+	text-align: center;
+	font-family: "Poiret One", Geneva, sans-serif;
+	font-size: 1.6em;
+	padding: 15px 0px;
+	color: green;
+	font-weight: bold;
+	margin-top: 10px;
+	background: rgba(140,250,0,.3);
+}
