--- a/app/views/contact_us_mailer/_contact_us_mailer.html.erb
+++ b/app/views/contact_us_mailer/_contact_us_mailer.html.erb
@@ -9,5 +9,5 @@
 		</div>
 		<%= text_area_tag :cust_message, nil, :placeholder => "Your message here", :class => "contact-field", :rows => '10' %>
 	</br>
-	<%= submit_tag 'Send', :class=>"btn"%>
+	<%= submit_tag 'Send', :class=>"btn buttn"%>
 <%end%>
