holla holla get dolla

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -84,7 +84,7 @@
 
   <div class="actions">
   <% if @owner.is_open? %>
-    <%= button_tag(type: 'submit', class: "btn btn-primary btn-danger") do %>
+    <%= button_tag(type: 'submit', class: "btn btn-primary btn-danger", id: "place-order") do %>
       <i class="glyphicon glyphicon-cutlery icon-white"></i> Place Order
     <% end %>
   <% else %> 
