handling cash payments

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -5,7 +5,10 @@
 	<%= f.label :add_tax %>
 	<%= f.check_box :add_tax %>
 	<%= f.label :tax %>
-	<%= f.text_field :tax %>
+	<%= f.text_field :tax %><br />
+
+	<%= f.label :cash_only %>
+	<%= f.check_box :cash_only %>
 
 	<%= f.label :open %>
 	<%= f.check_box :open %>
