--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -6,13 +6,23 @@
 	<%= telephone_field(:user, :phone, :class => "form-control",:id => "order-phone-number", :placeholder => "Phone #") %> 
 	<br />
  
+  <% if @owner.cash_only %>
+      <div class="text-center" style="width:100%">
 
-	<div class="text-center">
-  <script src="https://checkout.stripe.com/checkout.js"  class="stripe-button"
-          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-name="Shnack"
-          data-label="Pay For Your Order"
-          data-description="Pay For Your Order"
-          data-amount="<%= @order.total %>"></script>
+        <%= button_tag(type: 'submit', class: "btn btn-danger") do %>
+          <i class="glyphicon glyphicon-cutlery icon-white"></i> Confirm Order
+        <% end %> <br />
+        Pay with cash when you pick up your food.
       </div>
+  <% else %>
+
+  	<div class="text-center">
+    <script src="https://checkout.stripe.com/checkout.js"  class="stripe-button"
+            data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+            data-name="Shnack"
+            data-label="Pay For Your Order"
+            data-description="Pay For Your Order"
+            data-amount="<%= @order.total %>"></script>
+        </div>
+  <% end %>
 <% end %>
