changed the way i validate phone numbers

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -251,3 +251,16 @@ ul.info-links {
 	margin-top: 10px;
 	background: rgba(140,250,0,.3);
 }
+
+input[type="tel"].error { border: 1px solid #780000  }
+
+.phone-error {
+	margin-top:10px;
+	padding:3px;
+	border: 1px solid #780000;
+	border-radius:10px;
+	background-color:#F5E6E6;
+	font-family: "Poiret One", Geneva, sans-serif;
+	color:#780000;
+
+}
