added order validation

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -7,3 +7,5 @@
 		<%= link_to 'Cancel', :controller => 'application', :action => "select_stadium" %>
 	<% end %>
 </div>
+
+<div class="error phone-error" style="margin-top:30px; display:none;">Come on! You have to order something!</div>
