--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -254,7 +254,7 @@ ul.info-links {
 
 input[type="tel"].error { border: 1px solid #780000  }
 
-.phone-error {
+.error {
 	margin-top:10px;
 	padding:3px;
 	border: 1px solid #780000;
